--- a/src/rwb.fallback.html
+++ b/src/rwb.fallback.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <title>Site offline - redirecting</title>
 <meta http-equiv="refresh"
-	content="1;url={REDIRECTION_URL}">
+	content="1;url={RWB_REDIRECTION_URL}">
 <script type="text/javascript">
-	window.location.href = '{REDIRECTION_URL}';
+	window.location.href = '{RWB_REDIRECTION_URL}';
 </script>
 </head>
 <body>
 	<p>
-		Redirecting you to <a href='{REDIRECTION_URL}'>{REDIRECTION_URL}</a>...
+		Redirecting you to <a href='{RWB_REDIRECTION_URL}'>{RWB_REDIRECTION_URL}</a>...
 	</p>
 </body>
 </html>
