different build file

--- a/demo/rwb.fallback.html
+++ b/demo/rwb.fallback.html
@@ -12,8 +12,7 @@ margin-bottom: 5px;
 <body>
 <p>This website could not be accessed. Alternative URLs:</p>
 <ul>
-<li><a href='https://bbc1.azurewebsites.net'>https://bbc1.azurewebsites.net</a></li>
-<li><a href='https://github.com/greatfire/wiki'>https://github.com/greatfire/wiki</a></li>
+<li><a href='https://bbc1.azurewebsites.net'>https://bbc1.azurewebsites.net</a></li><li><a href='https://github.com/greatfire/wiki'>https://github.com/greatfire/wiki</a></li>
 <li><a href='/'>This URL</a></li>
 </ul>
 <p>
