--- a/src/rwb.fallback.html
+++ b/src/rwb.fallback.html
@@ -12,7 +12,7 @@ li {
 <body>
 	<p>{RWB_FALLBACK_INTRO}</p>
 	<ul>
-		<li><a href='{RWB_REDIRECTION_URL}'>{RWB_REDIRECTION_URL}</a></li>
+		{RWB_REDIRECTION_URL_LIST_ITEMS}
 		<li><a href='/'>{RWB_FALLBACK_THIS_URL}</a></li>
 	</ul>
 	<p>
