--- a/basic/demo/rwb.fallback.html
+++ b/basic/demo/rwb.fallback.html
@@ -12,7 +12,7 @@ margin-bottom: 5px;
 <body>
 <p>This website could not be accessed. Alternative URLs:</p>
 <ul>
-<li><a href='https://bbc1.azurewebsites.net'>https://bbc1.azurewebsites.net</a></li><li><a href='https://github.com/greatfire/wiki'>https://github.com/greatfire/wiki</a></li>
+<li><a href='https://d3059gkikm7ixv.cloudfront.net/basic/demo/'>https://d3059gkikm7ixv.cloudfront.net/basic/demo/</a></li><li><a href='https://d3u4seijlqumgj.cloudfront.net/basic/demo/'>https://d3u4seijlqumgj.cloudfront.net/basic/demo/</a></li><li><a href='https://d20fpcnyklk6h4.cloudfront.net/basic/demo/'>https://d20fpcnyklk6h4.cloudfront.net/basic/demo/</a></li>
 <li><a href='/'>This URL</a></li>
 </ul>
 <p>
